WIP - storeshop inherit

--- a/Web.config
+++ b/Web.config
@@ -1,9 +1,5 @@
 ﻿<configuration>
-	<configSections>
-		<sectionGroup name="devExpress">
-			<section name="settings" type="DevExpress.Web.SettingsConfigurationSection, DevExpress.Web.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false"/>
-		</sectionGroup>
-	</configSections>
+
 
 	<system.web>
 		<sessionState mode="InProc" cookieless="false" timeout="540"/>
@@ -28,7 +24,7 @@
     <!--" San Antonio "," Firma Nativa "-->
     <add key="system_name" value="firma_nativa"/>
     <!--value (firma_nativa o san_antonio) Estética-->
-    <add key="main_style" value="main_SA.css"/>
+    <add key="main_style" value="main_FN.css"/>
     <!--value (main_FN.css o main_SA.css)-->
   </appSettings>
 
