--- a/Web.config
+++ b/Web.config
@@ -2,6 +2,8 @@
 
 
 	<system.web>
+		<customErrors mode="Off"/>
+
 		<sessionState mode="InProc" cookieless="false" timeout="540"/>
 		<compilation debug="true" strict="false" explicit="true" targetFramework="4.7.2">
 
@@ -13,12 +15,18 @@
   
   <appSettings>
     <!--<add key="modulo_id" value="1"/>-->
-    <!--CONEXIÓN-->
+    <!--CONEXIÓN REAL
     <add key="servidor" value="1611ELCAPESTORE.mssql.somee.com"/>
     <add key="base" value="1611ELCAPESTORE"/>
     <add key="user" value="caballo_SQLLogin_1"/>
     <add key="pass" value="aepqkahruk"/>
-    <!--Variables-->
+	  CONEXIÓN LOCAL-->
+
+	  <add key="servidor" value="."/>
+	<add key="base" value="baseStore"/>
+	<add key="user" value="userStore"/>
+	<add key="pass" value="c8249"/>
+	  <!--Variables-->
     <add key="activar_logs" value="true"/>
     <add key="title" value=" Tienda Online "/>
     <!--" San Antonio "," Firma Nativa "-->
