--- a/Web.config
+++ b/Web.config
@@ -27,6 +27,7 @@
 		<add key="title" value=" Tienda Online "/>
 		<!--" San Antonio "," Firma Nativa "-->
 		<add key="system_name" value="firma_nativa"/>
+		<add key="own_folder_name" value="CAPE"/>
 		<!--value (firma_nativa o san_antonio) Estética-->
 		<add key="main_style" value="main_FN.css"/>
 		<!--value (main_FN.css o main_SA.css)-->
