--- a/Web.config
+++ b/Web.config
@@ -12,16 +12,16 @@
 	<runtime></runtime>
 	<appSettings>
 		<!--<add key="modulo_id" value="1"/>-->
-		<!--CONEXIÓN REAL
+		<!--CONEXIÓN REAL-->
     <add key="servidor" value="1611ELCAPESTORE.mssql.somee.com"/>
     <add key="base" value="1611ELCAPESTORE"/>
     <add key="user" value="caballo_SQLLogin_1"/>
     <add key="pass" value="aepqkahruk"/>
-	  CONEXIÓN LOCAL-->
-		<add key="servidor" value="."/>
-		<add key="base" value="baseStore"/>
-		<add key="user" value="userStore"/>
-		<add key="pass" value="c8249"/>
+		<!--CONEXIÓN LOCAL-->
+			<!--<add key="servidor" value="."/>
+			<add key="base" value="baseStore"/>
+			<add key="user" value="userStore"/>
+			<add key="pass" value="c8249"/>-->
 		<!--Variables-->
 		<add key="activar_logs" value="true"/>
 		<add key="title" value=" Tienda Online "/>
@@ -31,5 +31,7 @@
 		<!--value (firma_nativa o san_antonio) Estética-->
 		<add key="main_style" value="main_FN.css"/>
 		<!--value (main_FN.css o main_SA.css)-->
+		<!--The license context used-->
+		<add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
 	</appSettings>
 </configuration>
