--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="EPPlus" version="7.1.2" targetFramework="net40" />
   <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net40" />
   <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net40" />
   <package id="RestSharp" version="106.12.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Pkcs" version="6.0.0" targetFramework="net472" />
 </packages>
