--- a/Web.config
+++ b/Web.config
@@ -1,5 +1,6 @@
 ﻿<configuration>
 	<system.web>
+	    <httpRuntime maxRequestLength="8192" />
 		<customErrors mode="Off"/>
 		<sessionState mode="InProc" cookieless="false" timeout="540"/>
 		<compilation debug="true" strict="false" explicit="true" targetFramework="4.7.2">
@@ -24,14 +25,22 @@
 			<add key="pass" value="c8249"/>-->
 		<!--Variables-->
 		<add key="activar_logs" value="true"/>
-		<add key="title" value=" Tienda Online "/>
+		<add key="title" value="Tienda Online "/>
 		<!--" San Antonio "," Firma Nativa "-->
 		<add key="system_name" value="firma_nativa"/>
-		<add key="own_folder_name" value="CAPE"/>
+		<add key="own_folder_name" value="App1"/>
 		<!--value (firma_nativa o san_antonio) Estética-->
 		<add key="main_style" value="main_FN.css"/>
 		<!--value (main_FN.css o main_SA.css)-->
 		<!--The license context used-->
 		<add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
 	</appSettings>
+	<system.webServer>
+    <security>
+		  <requestFiltering>
+			<!-- Permitir archivos de hasta 8 MB -->
+			<requestLimits maxAllowedContentLength="8388608" />
+		  </requestFiltering>
+    </security>
+  </system.webServer>
 </configuration>
