--- a/Web.config
+++ b/Web.config
@@ -25,10 +25,10 @@
 			<add key="pass" value="c8249"/>-->
 		<!--Variables-->
 		<add key="activar_logs" value="true"/>
-		<add key="title" value="Tienda Online "/>
+		<add key="title" value="Olivia"/>
 		<!--" San Antonio "," Firma Nativa "-->
 		<add key="system_name" value="firma_nativa"/>
-		<add key="own_folder_name" value="App1"/>
+		<add key="own_folder_name" value="olivia_products"/>
 		<!--value (firma_nativa o san_antonio) Estética-->
 		<add key="main_style" value="main_FN.css"/>
 		<!--value (main_FN.css o main_SA.css)-->
